--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
-  </head>
-  <body>
-    <h1>Odin Recipes</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Odin Recipes</title>
+</head>
+
+<body>
+  <ul>
+    <li><a href="./recipes/lasagna.html">The Lasagna Recipe</a></li>
+    <li><a href="./recipes/chicken-stir-fry.html">The Chicken Stir-Fry Recipe</a></li>
+    <li><a href="./recipes/chocolate-chip-cookies.html">The Chocolate Chip Cookies Recipe</a></li>
+  </ul>
+  <h1>Odin Recipes</h1>
+</body>
+
 </html>
